Bug with form container on lower resolution
Top of form-container was overflowing

--- a/style.css
+++ b/style.css
@@ -582,12 +582,8 @@ a:hover {
   background-color: #DC1969;
 }
 .modal-container .form-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  position: relative;
+  margin: 0 auto;
   padding: 64px 36px 46px 40px;
   max-width: 100%;
   width: 550px;
